check/testdata/invalid-legacy-files/guide_invalid_frontmatter.html.markdown
---
subcategory: "Example"
layout: "example"
page_title: "Example Guide"
description: |-
Missing indentation.
---
<!-- Copyright IBM Corp. 2019, 2026 -->
<!-- SPDX-License-Identifier: MPL-2.0 -->

# Example Guide

Example contents.
